[gd_scene load_steps=10 format=2]

[ext_resource path="res://Assets/AssetsAlternativo/SpritesheetAlt/hit01.png" type="Texture" id=1]
[ext_resource path="res://Objetos/SlashAnimationAlt.gd" type="Script" id=2]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "Slash"
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8 ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "Slash"
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8 ]
}

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=6]
resource_name = "Slash"
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8 ]
}

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 61.5, 57 )

[node name="SlashArea1" type="Area2D"]
position = Vector2( 170, 270 )
scale = Vector2( 2, 2 )
script = ExtResource( 2 )

[node name="Slash1" type="Sprite" parent="."]
position = Vector2( -85, -61 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 1 )
offset = Vector2( 85, 61 )
hframes = 5
vframes = 2

[node name="AnimationPlayer1" type="AnimationPlayer" parent="Slash1"]
anims/RESET = SubResource( 1 )
anims/Slash = SubResource( 2 )

[node name="SlashArea2" type="Area2D" parent="."]
position = Vector2( 22, 13 )

[node name="Slash2" type="Sprite" parent="SlashArea2"]
position = Vector2( -88, -67 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 1 )
offset = Vector2( 85, 61 )
hframes = 5
vframes = 2

[node name="AnimationPlayer2" type="AnimationPlayer" parent="SlashArea2/Slash2"]
anims/RESET = SubResource( 3 )
anims/Slash = SubResource( 4 )

[node name="SlashArea3" type="Area2D" parent="."]
position = Vector2( 34, 28 )

[node name="Slash3" type="Sprite" parent="SlashArea3"]
position = Vector2( -88, -67 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 1 )
offset = Vector2( 85, 61 )
hframes = 5
vframes = 2

[node name="AnimationPlayer3" type="AnimationPlayer" parent="SlashArea3/Slash3"]
anims/RESET = SubResource( 5 )
anims/Slash = SubResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 57.5, 42 )
shape = SubResource( 7 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
